--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 astroid==2.1.0
+atomicwrites==1.3.0
+attrs==18.2.0
 Click==7.0
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
@@ -8,7 +10,11 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
+more-itertools==6.0.0
+pluggy==0.8.1
+py==1.7.0
 pycodestyle==2.5.0
+pytest==4.2.1
 six==1.12.0
 SQLAlchemy==1.2.18
 typed-ast==1.3.1
