--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+aniso8601==6.0.0
 astroid==2.1.0
 atomicwrites==1.3.0
 attrs==18.2.0
+autopep8==1.4.3
 Click==7.0
 Flask==1.0.2
+Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.3.2
 isort==4.3.4
 itsdangerous==1.1.0
@@ -14,7 +17,9 @@ more-itertools==6.0.0
 pluggy==0.8.1
 py==1.7.0
 pycodestyle==2.5.0
+pylint==2.2.2
 pytest==4.2.1
+pytz==2018.9
 six==1.12.0
 SQLAlchemy==1.2.18
 typed-ast==1.3.1
