--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ atomicwrites==1.3.0
 attrs==18.2.0
 autopep8==1.4.3
 Click==7.0
+colorama==0.4.1
 Flask==1.0.2
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.3.2
@@ -19,6 +20,7 @@ py==1.7.0
 pycodestyle==2.5.0
 pylint==2.2.2
 pytest==4.2.1
+python-dateutil==2.8.0
 pytz==2018.9
 six==1.12.0
 SQLAlchemy==1.2.18
